[paimon] 整理文档 / 增加 paimon 1.4